syntax = "proto3";

package wafie.v1;

import "wafie/v1/ingress.proto";

message Service {
  string fqdn = 1;
  int32 port = 2;
  int32 container_port = 3;
  int32 proxy_listener_port = 4;
  repeated string upstream_ips = 5;
  repeated Ingress ingresses = 6;
}